[package]
authors = ["reticulis"]
name = "gemini2html"
version = "0.2.0"
edition = "2021"
description = "Simple library for parsing Gemini (gmi) to HTML format"
license = "GPL-3.0"
repository = "https://github.com/reticulis/gmi2html"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
